# sequential-questioning

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: main.py  version.py
app/api/: __init__.py
app/core/: config.py  logging.py  monitoring.py
app/mcp/: __init__.py  monitoring.py  sequential_questioning.py
app/migrations/: env.py
app/models/: __init__.py  conversation.py  database.py  message.py  user_session.py
app/repositories/: __init__.py  base.py  conversation.py  message.py  user_session.py
app/schemas/: __init__.py  conversation.py  message.py  question_generation.py  user_session.py
app/services/: __init__.py  question_generation.py  service_registry.py  vector_db.py  vector_search.py
docs/: api_reference.md  architecture.md  automatic_follow_up_questions.md  deployment.md  deployment_verification.md  final_deployment_plan.md  load_testing.md  operational_runbook.md  production_deployment_guide.md  project_release_notes.md  usage_examples.md
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/database/: kustomization.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
k8s/monitoring/: grafana-deployment.yaml  grafana-secrets.yaml  grafana-service.yaml  kustomization.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
scripts/: init_db.sql  initialize_app.sh  release_validation.sh  run_migrations.sh
tests/: __init__.py  conftest.py
tests/api/: test_monitoring.py
tests/integration/: test_sequential_questioning.py  test_sequential_questioning_flow.py
tests/mcp/: __init__.py  (+1 more)
(+30 files in other folders)
